--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "echarts": "^4.1.0",
+    "lodash": "^4.17.10",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
